--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,10 +1,10 @@
+$def with (content)
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>It's all in the head!</title>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/mithril/0.2.0/mithril.min.js"></script>
+    <title>$content.title</title>
   </head>
   <body>
-  
+    $:content
   </body>
 </html>
