Lots of templates done

--- a/templates/latest.html
+++ b/templates/latest.html
@@ -1,10 +1,10 @@
 $def with (values)
-$var title: Hello Kitty
+$var title: Hello $values['user_mail']
 
 <div class="mdl-grid">
     <div class="mdl-card mdl-shadow--4dp mdl-cell mdl-cell--12-col">
         <div class="mdl-color-text--grey-700 mdl-card__supporting-text">
-            <p>Hello $values, how are you doin?</p>
+            
         </div>
     </div>
 </div>
