--- a/templates/home.html
+++ b/templates/home.html
@@ -1,5 +1,6 @@
 $def with (values)
 $var title: Hello Kitty
+$var jsfiles: home.js
 
 <div class="mdl-grid">
     <div class="mdl-card mdl-shadow--4dp mdl-cell mdl-cell--12-col">
