Have to figure out how livereload works

--- a/templates/login.html
+++ b/templates/login.html
@@ -14,6 +14,12 @@ $var jsfiles: login.js
                     <input class="mdl-textfield__input" name="user_pwd" type="password" id="user-pwd" required>
                     <label class="mdl-textfield__label" for="user-pwd">Password</label>
                   </div>
+                  <div class="mdl-checkboxfield">
+                    <label class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect" for="remember-me">
+                      <input type="checkbox" id="remember-me" name="user_remember" value="1" class="mdl-checkbox__input">
+                      <span class="mdl-checkbox__label">Remember me</span>
+                    </label>
+                  </div>
                   <button type="submit" class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored">
                     Login
                 </button>
