--- a/templates/admin.html
+++ b/templates/admin.html
@@ -8,16 +8,48 @@ $def with (content)
     <link rel="stylesheet" href="https://code.getmdl.io/1.2.1/material.indigo-pink.min.css">
     <link rel="stylesheet" href="/static/css/foxy-beaver.css">
     <script defer src="https://code.getmdl.io/1.2.1/material.min.js"></script>
-    <script defer scr="https://cdn.jsdelivr.net/umbrella/2.6.7/umbrella.min.js"></script>
   </head>
   <body>
     <div class="mdl-layout__container">
-      <div class="mdl-layout mdl-js-layout">
-      <main class="mdl-layout__content">
-        <div class="page-content">$:content</div>
-      </main>
-      <footer class="mdl-mini-footer">Footer</footer>
+      <div class="mdl-layout mdl-js-layout mdl-layout--fixed-drawer mdl-layout--fixed-header has-drawer is-upgraded">
+        <header class="mdl-layout__header mdl-color--grey-100 mdl-color-text--grey-600 is-casting-shadow">
+          <div class="mdl-layout__drawer-button">
+            <i class="material-icons"></i>
+          </div>
+          <div class="mdl-layout__header-row">
+            <span class="mdl-layout-title">$content.title</span>
+            <div class="mdl-layout-spacer"></div>
+          </div>
+        </header>
+        <div class="mdl-layout__drawer mdl-color--blue-grey-900 mdl-color-text--blue-grey-50">
+          <header></header>
+          <nav class="mdl-navigation mdl-color--blue-grey-800">
+            <a href="/admin/latest" class="mdl-navigation__link">Home</a>
+            <a href="/admin/media" class="mdl-navigation__link">Media</a>
+            <a href="/admin/users" class="mdl-navigation__link">Users</a>
+            <a href="/admin/documents" class="mdl-navigation__link">Documents</a>
+          </nav>
+        </div>
+        <main class="mdl-layout__content mdl-color--grey-100">
+          <div class="mdl-grid">
+            <div class="mdl-color--white mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-grid">
+              <div class="mdl-cell mdl-cell--4-col mdl-cell--3-col-desktop">hello</div>
+            </div>
+          </div>
+        </main>
+      </div>
     </div>
+    
+    <div id="snackbar" class="mdl-js-snackbar mdl-snackbar">
+      <div class="mdl-snackbar__text"></div>
+      <button class="mdl-snackbar__action" type="button"></button>
     </div>
+
+    <script src="/static/js/require.js"></script>
+    $if content.jsfiles:
+      $for f in content.jsfiles.split():
+        <script>
+          require('$f');
+        </script>
   </body>
 </html>
