--- a/templates/login.html
+++ b/templates/login.html
@@ -5,7 +5,7 @@ $var jsfiles: login.js
 <div class="mdl-grid">
     <div class="mdl-card mdl-shadow--4dp mdl-cell mdl-cell--12-col">
         <div class="mdl-color-text--grey-700 mdl-card__supporting-text">
-            <form action="/adgang" id="form__login" method="post" autocomplete="off">
+            <form action="/login/" id="form__login" method="post" autocomplete="off">
               <div class="mdl-textfield mdl-js-textfield">
                     <input class="mdl-textfield__input" name="user_mail" type="text" id="user-mail" required>
                     <label class="mdl-textfield__label" for="user-mail">Username</label>
