--- a/templates/layout.html
+++ b/templates/layout.html
@@ -2,6 +2,7 @@ $def with (content)
 <!DOCTYPE html>
 <html lang="en">
   <head>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8" />
     <title>$content.title</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
