--- a/templates/latest.html
+++ b/templates/latest.html
@@ -3,9 +3,20 @@ $var title: Hello $values['user_mail']
 $var jsfiles: latest.js
 
 <div class="mdl-grid">
-    <div class="mdl-card mdl-shadow--4dp mdl-cell mdl-cell--12-col">
-        <div class="mdl-color-text--grey-700 mdl-card__supporting-text">
-            
-        </div>
-    </div>
+  <div class="mdl-cell mdl-cell--12-col">
+    <ul class="mdl-list">
+    $for post in values['blog_posts']:
+      <li class="mdl-list__item">
+        <span class="mdl-list__item-primary-content">
+          <i class="material-icons mdl-list__item-avatar">person</i>
+          <a href="/blog/$post.id">$post.title</a>
+        </span>
+        <span class="mdl-list__item-secondary-action">
+          <label class="mdl-switch mdl-js-switch mdl-js-ripple-effect">
+            <input type="checkbox" class="mdl-switch__input">
+          </label>
+        </span>
+      </li>
+    </ul>
+  </div>
 </div>
