Adding more features

--- a/templates/admin.html
+++ b/templates/admin.html
@@ -25,10 +25,22 @@ $def with (content)
         <div class="mdl-layout__drawer mdl-color--blue-grey-900 mdl-color-text--blue-grey-50">
           <header></header>
           <nav class="mdl-navigation mdl-color--blue-grey-800">
-            <a href="/admin/" class="mdl-navigation__link">Home</a>
-            <a href="/media/" class="mdl-navigation__link">Media</a>
-            <a href="/user/" class="mdl-navigation__link">User</a>
-            <a href="/blog/" class="mdl-navigation__link">Blog</a>
+            <a href="/admin/" class="mdl-navigation__link">
+              <i class="material-icons">home</i>
+              Home
+            </a>
+            <a href="/media/" class="mdl-navigation__link">
+              <i class="material-icons">insert_photo</i>
+              Media
+            </a>
+            <a href="/user/" class="mdl-navigation__link">
+              <i class="material-icons">person</i>
+              User
+            </a>
+            <a href="/blog/" class="mdl-navigation__link">
+              <i class="material-icons">mode_edit</i>
+              Blog
+            </a>
           </nav>
         </div>
         <main class="mdl-layout__content mdl-color--grey-100">
