--- a/templates/layout.html
+++ b/templates/layout.html
@@ -6,7 +6,7 @@ $def with (content)
     <meta charset="utf-8" />
     <title>$content.title</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" href="https://code.getmdl.io/1.2.1/material.indigo-pink.min.css">
+    <link rel="stylesheet" href="https://code.getmdl.io/1.2.1/material.grey-orange.min.css">
     <link rel="stylesheet" href="/static/css/foxy-beaver.css">
     <script defer src="https://code.getmdl.io/1.2.1/material.min.js"></script>
   </head>
