--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,16 @@
 $def with (values)
 $var title: Index
-$var jsfiles: home.js
 
+<article id="preview">
+  <div class="logo">
+    <a href="/">hello</a>
+  </div>
+  <div class="heading">
+    
+  </div>
+</article>
+
+<!--
 <div class="mdl-grid">
   $for post in values['posts']:
     <div class="mdl-card mdl-cell--8-col">
@@ -16,3 +25,4 @@ $var jsfiles: home.js
         </div>
     </div>
 </div>
+//-->
