--- a/templates/user.html
+++ b/templates/user.html
@@ -1,9 +1,9 @@
 $def with (values)
 $var title: User
-$var jsfiles: media.js
+$var jsfiles: user.js
 
 <div class="mdl-grid">
-    <div class="mdl-card mdl-shadow--4dp mdl-cell mdl-cell--12-col">
+    <div class="mdl-cell mdl-cell--12-col">
         <div class="mdl-color-text--grey-700 mdl-card__supporting-text">
             
         </div>
