--- a/templates/latest.html
+++ b/templates/latest.html
@@ -6,18 +6,20 @@ $var jsfiles: latest.js
   <div class="mdl-cell mdl-cell--12-col">
     <ul class="mdl-list">
     $for post in values['blog_posts']:
-      <li class="mdl-list__item">
+      <li class="mdl-list__item mdl-list__item--two-line">
         <span class="mdl-list__item-primary-content">
           <i class="material-icons mdl-list__item-avatar">mode_edit</i>
-          <a href="/blog/$post.id">$post.title</a>
+          <span><a href="/blog/$post.id">$post.title</a></span>
+          <span class="mdl-list__item-sub-title"></span>
         </span>
-        <span class="mdl-list__item-secondary-action">
-          <label class="mdl-switch mdl-js-switch mdl-js-ripple-effect">
-            $if post.online == 1:
-              <input name="blog_online" value="1" data-blog-id="$post.id" checked type="checkbox" class="mdl-switch__input">
+        <span class="mdl-list__item-secondary-content">
+          <span class="mdl-list__item-secondary-content">
+            <span class="mdl-list__item-secondary-info">Online</span>
+            $if post.online:
+              <i class="material-icons">visibility</i>
             $else:
-              <input name="blog_online" value="1" type="checkbox" data-blog-id="$post.id" class="mdl-switch__input">
-          </label>
+              <i class="material-icons">visibility_off</i>
+          </span>
         </span>
       </li>
     </ul>
