--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,49 +1,28 @@
 $def with (content)
 <!DOCTYPE html>
-<html lang="en">
+<html amp lang="en">
   <head>
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta charset="utf-8" />
+    <meta charset="utf-8">
+    <script async scr="https://cdn.ampproject.org/v0.js"></script>
     <title>$content.title</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" href="https://code.getmdl.io/1.2.1/material.grey-orange.min.css">
-    <link rel="stylesheet" href="/static/css/foxy-beaver.css">
-    <script defer src="https://code.getmdl.io/1.2.1/material.min.js"></script>
+    <link rel="canonical" href="http://localhost/" />
+    <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
+    <script type="application/ld+json">
+      "@context": "http://schema.org",
+      "@type": "NewsArticle",
+      "headline": "$content.title",
+      "datePublished": "2015-10-07T12:02:41Z",
+      "image": [
+        "logo.jpg"
+      ]
+    </script>
+    <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style>
+  <style amp-custom>
+    /* Custom styles */
+
+  </style>
   </head>
-  <body itemscope itemtype="http://schema.org/WebPage">
-    <div class="mdl-layout__container">
-      <div class="mdl-layout mdl-js-layout">
-      <main class="mdl-layout__content">
-        <div class="page-content">$:content</div>
-      </main>
-      <footer class="mdl-mini-footer">
-        <div class="mdl-grid">
-          <div class="mdl-cell mdl-cell--6-col">
-            <nav>
-              <a href="/">
-                Home
-              </a>
-              <a href="/contact/">
-                Contact
-              </a>
-            </nav>
-          </div>
-          <div class="mdl-cell mdl-cell--6-col"></div>
-        </div>        
-      </footer>
-    </div>
-    </div>
-
-    <div id="snackbar" class="mdl-js-snackbar mdl-snackbar">
-      <div class="mdl-snackbar__text"></div>
-      <button class="mdl-snackbar__action" type="button"></button>
-    </div>
-
-    <script src="/static/js/require.js"></script>
-    $if content.jsfiles:
-      $for f in content.jsfiles.split():
-        <script>
-          require('$f');
-        </script>
+  <body>
+    here$:content
   </body>
 </html>
