--- a/templates/blog.html
+++ b/templates/blog.html
@@ -4,7 +4,7 @@ $var jsfiles: blog.js
 
 <div class="mdl-grid">
     <div class="mdl-cell mdl-cell--12-col">
-      <form action="/blog/$values['blog_id']" method="post" id="form__blog">
+      <form action="/blog/$values['blog_id']/" method="post" id="form__blog">
         <div class="mdl-textfield mdl-js-textfield form_input_container">
           <input class="mdl-textfield__input" type="text" id="blog-title" name="blog_title" value="$values['blog_title']">
           <label class="mdl-textfield__label" for="blog-title">Blog Title</label>
