Minor changes here and there

--- a/templates/admin.html
+++ b/templates/admin.html
@@ -37,9 +37,9 @@ $def with (content)
               <i class="material-icons">person</i>
               User
             </a>
-            <a href="/blog/" class="mdl-navigation__link">
+            <a href="/post/" class="mdl-navigation__link">
               <i class="material-icons">mode_edit</i>
-              Blog
+              Post
             </a>
           </nav>
         </div>
