--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@ $var title = 'Hello Pussy'
       <article class="post" itemscope itemtype="http://schema.org/BlogPosting" role="article">
         <div class="article-item">
           <header class="post-header">
-            <h2 class="post-title" itemprop="name"><a href="/post/$post.slug/" itemprop="url">$post.title</a></h2>
+            <h2 class="post-title" itemprop="name"><a href="/blog/$post.slug/" itemprop="url">$post.title</a></h2>
           </header>
           <section class="post-excerpt" itemprop="description">
             <p>$post.teaser</p>
