--- a/templates/layout.html
+++ b/templates/layout.html
@@ -11,7 +11,10 @@ $def with (content)
   <meta name="viewport" content="width=device-width,minimum-scale=1">
 
   <title>$content.title</title>
-  <meta name="description" content="Look how fast it is">
+  $if 'teaser' in content:
+    <meta name="description" content="$content.teaser">
+  $else:
+    <meta name="description" content="">
 
   <link rel="canonical" href="http://yourdomain.com/amplify/">
   <link rel="alternate" type="application/rss+xml" title="Amplify Demo Site" href="http://yourdomain.com/amplify/feed.xml">
@@ -21,7 +24,7 @@ $def with (content)
 {
   "@context": "http://schema.org",
   "@type": "NewsArticle",
-  "mainEntityOfPage": "http://yourdomain.com/amplify/",
+  "mainEntityOfPage": "",
   "headline": "Amplify Demo Site",
   "datePublished": "2016-03-15T04:03:22+00:00",
   "dateModified": "2016-03-15T04:03:22+00:00",
@@ -215,11 +218,7 @@ code { padding: 1px 5px; }
 
 pre { padding: 8px 12px; overflow-x: scroll; }
 pre > code { border: 0; padding-right: 0; padding-left: 0; }
-
   </style>
-
-
-
   <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
   <script async src="https://cdn.ampproject.org/v0.js"></script>
 </head>
