--- a/templates/post.html
+++ b/templates/post.html
@@ -1,5 +1,6 @@
 $def with (values)
 $var title: $values['blogpost_title']
+$var teaser: $values['blogpost_teaser']
 $var jsfiles: home.js
 
 <article class="post">
