--- a/templates/post.html
+++ b/templates/post.html
@@ -10,7 +10,7 @@ $var jsfiles: home.js
 
   <section class="post-content">
     <a name="topofpage"></a>
-		$values['blogpost_content']
+		$:markdown(values['blogpost_content'])
   </section>
   <footer class="post-footer">
     <section class="share">
