Authentication and stuff

--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@ $var title = 'Hello Pussy'
             <p>$post.teaser</p>
           </section>
           <div class="post-meta">
-            <time datetime="13 March 2016">$post.when_created</time>
+            <time datetime="13 March 2016">post.when_created</time>
           </div>
         </div>
       </article>
