--- a/templates/latest.html
+++ b/templates/latest.html
@@ -9,7 +9,7 @@ $var jsfiles: latest.js
       <li class="mdl-list__item mdl-list__item--two-line">
         <span class="mdl-list__item-primary-content">
           <i class="material-icons mdl-list__item-avatar">mode_edit</i>
-          <span><a href="/post/$post.id">$post.title</a></span>
+          <span><a href="/entry/$post.id">$post.title</a></span>
           <span class="mdl-list__item-sub-title"></span>
         </span>
         <span class="mdl-list__item-secondary-content">
