--- a/templates/admin.html
+++ b/templates/admin.html
@@ -33,11 +33,11 @@ $def with (content)
               <i class="material-icons">insert_photo</i>
               Media
             </a>
-            <a href="/user/" class="mdl-navigation__link">
+            <a href="/users/" class="mdl-navigation__link">
               <i class="material-icons">person</i>
               User
             </a>
-            <a href="/post/" class="mdl-navigation__link">
+            <a href="/entry/" class="mdl-navigation__link">
               <i class="material-icons">mode_edit</i>
               Post
             </a>
