--- a/templates/layout.html
+++ b/templates/layout.html
@@ -218,6 +218,19 @@ code { padding: 1px 5px; }
 
 pre { padding: 8px 12px; overflow-x: scroll; }
 pre > code { border: 0; padding-right: 0; padding-left: 0; }
+/* newsletter */
+.newsletter-signup {
+  position: fixed;
+  left: 5px;
+  bottom: 5px;
+  background-color: #fff;
+  border: 1px solid #efefef;
+  padding: 10px;
+  max-width: 300px;
+}
+.newsletter-close {
+  text-align: right;  
+}
   </style>
   <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
   <script async src="https://cdn.ampproject.org/v0.js"></script>
@@ -248,9 +261,36 @@ pre > code { border: 0; padding-right: 0; padding-left: 0; }
 </main>
 
 <footer class="site-footer">
+    <!--
+    FB.api(
+      '/169300986862359/feed',
+      'GET',
+      {},
+      function(response) {
+        // Insert your code here
+      }
+    );
+    //-->
     <div class="inner">
          <section class="copyright">Kontakt <a href="mailto:your-email@domain.com">kontakt</a> &copy; 2016 &bull; <a href="/kontakt/">Kontakt</a></section>
     </div>
 </footer>
+
+<div class="newsletter-signup">
+  <div class="newsletter-close">
+    <a href="">
+      <i class="close">close</i>
+    </a>
+  </div>
+  <form>
+    <label>Email</label>
+    <input type="mail" name="user_mail" value="">
+    <span class="field-helper">
+      Få besked via email når der er nyt på hjemmesiden
+    </span>
+    <button type="button">Send</button>
+  </form>
+</div>
+
   </body>
 </html>
