--- a/templates/layout.html
+++ b/templates/layout.html
@@ -10,7 +10,7 @@ $def with (content)
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,minimum-scale=1">
 
-  <title>$content.title</title>
+  <title>$content.title | grfsamgladsaxe.dk</title>
   $if 'teaser' in content:
     <meta name="description" content="$content.teaser">
   $else:
